--- a/config.toml
+++ b/config.toml
@@ -89,11 +89,23 @@ pre = "" # pre is inserted before the translation (icons, image, etc)
 url = "/" 
 weight = 10 
 
+[[menu.main]]
+identifier = "about"
+pre = ""
+url = "/about/"
+weight = 20
+
+[[menu.main]]
+identifier = "portfolio"
+pre = ""
+url = "/portfolio/"
+weight = 30
+
 # [[menu.main]]
 # identifier = "blog" # identifier is use for translations
 # pre = "" # pre is inserted before the translation (icons, image, etc)
-# url = "/blog/" 
-# weight = 20 
+# url = "/blog/"
+# weight = 20
 
 # [[menu.main]]
 # identifier = "contact" # identifier is use for translations
