update expired address

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 # Use an empty string if you have multiple domain linking to your website
 # This string is used to generate the absolute URL for your assets.
-baseURL = 'https://mariano.mollo.me'
+baseURL = 'https://mollo.netlify.app'
 defaultContentLanguage = 'en'
 # Emoji in markdown files
 enableEmoji = true
@@ -22,7 +22,7 @@ customJS = ["js/console.js"] # Path relative to assets folder
 # For blog page description you can overwrite it 
 # in the front matter
 description = "Personal website"
-email = "mariano@mollo.me"
+email = "marianomollo@protonmail.ch"
 favicon = '/icons/ninja.svg'
 # Dark mode support
 # Supported value are :
@@ -36,7 +36,7 @@ favicon = '/icons/ninja.svg'
 alt = "email icon"
 icon = "/icons/email.svg"
 name = "email"
-url = "mailto:mariano@mollo.me"
+url = "mailto:marianomollo@protonmail.ch"
 
 [[params.social]]
 alt = "github icon"
