--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 # Use an empty string if you have multiple domain linking to your website
 # This string is used to generate the absolute URL for your assets.
-baseURL = 'https://mollo.netlify.app'
+baseURL = 'https://soffice.netlify.app'
 defaultContentLanguage = 'en'
 # Emoji in markdown files
 enableEmoji = true
